@@ -2,10 +2,11 @@
 Hash: SHA512
 
 DIST texttable-0.8.0.tar.gz 6051 RMD160 6fab3df1be78c6f3fccda47a5a972f1d3f453984 SHA1 52a2a1f89364a5d65e162792a8ea26d6ea8b4aa8 SHA256 83b5188c8d7132a876d8757a23fdfeab7e99983c970abde9870e39d30cfa0e38
+DIST texttable-0.8.1.tar.gz 6027 RMD160 841b7f667fff8a8686f603cd815e7845f018ab7d SHA1 a40be9ca58f10b88b894ac57160fc410ab390cbc SHA256 09272b9ba14fa8dae727889ff60f8317839eb590d6563c53a9d6f43b47030941
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7GRTMACgkQzJrj3cAXR0n0QQCfU1Egdbw9dEMyRIMzPitlxgNP
-cr0An1mmcbe4K0Q5kkrdXzoR5uwLJ7WN
-=0z0Q
+iEYEAREKAAYFAk7sracACgkQzJrj3cAXR0mBQgCcCxO1u8xvG2J2iRNGGzjWwNYA
+MF4AoIAR7ZZ+ngV+cV33Is8VOeV7wbhT
+=+VaU
 -----END PGP SIGNATURE-----
