@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=>=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+DEPEND=>=app-admin/eselect-python-20091230 =dev-lang/python-2*
 DESCRIPTION=module to generate a formatted text table, using ASCII characters.
 EAPI=3
 HOMEPAGE=http://foutaise.org/code/
-KEYWORDS=amd64 x86
+KEYWORDS=~amd64 ~x86
 LICENSE=LGPL-2.1
-RDEPEND=>=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+RDEPEND=>=app-admin/eselect-python-20091230 =dev-lang/python-2*
 SLOT=0
-SRC_URI=http://foutaise.org/code/texttable/texttable-0.8.0.tar.gz
+SRC_URI=http://foutaise.org/code/texttable/texttable-0.8.1.tar.gz
 _eclasses_=distutils	b4c334e216d998c4ce4b750cb091e42e	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	262a0983b6716502852b4418e0f433b8	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68
-_md5_=dc119db1ce917bd89b48b3667a09dbe8
+_md5_=a9f646bcb56dc4f67d96d44fbc8bc64f
