@@ -15,6 +15,8 @@ REM 2012-01-16 *1 MSG %"Stabilise amd64 dev-python/vanity-1.1.2%" %a
 REM 2012-01-16 *1 MSG %"Stabilise x86 dev-python/vanity-1.1.2%" %a
 REM 2012-01-16 *1 MSG %"Stabilise amd64 dev-python/snot-0.6%" %a
 REM 2012-01-16 *1 MSG %"Stabilise x86 dev-python/snot-0.6%" %a
+REM 2012-01-16 *1 MSG %"Stabilise amd64 dev-python/texttable-0.8.1%" %a
+REM 2012-01-16 *1 MSG %"Stabilise x86 dev-python/texttable-0.8.1%" %a
 REM 2012-01-24 *1 MSG %"Stabilise amd64 media-gfx/sphinxcontrib-mscgen-0.4%" %a
 REM 2012-01-24 *1 MSG %"Stabilise x86 media-gfx/sphinxcontrib-mscgen-0.4%" %a
 REM 2012-01-24 *1 MSG %"Stabilise x86 dev-python/attest-0.5.2%" %a
