@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*texttable-0.8.1 (17 Dec 2011)
+
+  17 Dec 2011; James Rowe <jnrowe@gmail.com> +texttable-0.8.1.ebuild:
+  Version bump [507], now supports Python 2.{4,5} too.
+
   18 Nov 2011; James Rowe <jnrowe@gmail.com> -texttable-0.7.0-r1.ebuild,
   texttable-0.8.0.ebuild:
   Keyworded x86.
